# snippets

./: README.md  dev.env  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
src/snippet/: __init__.py
src/snippet/typehints/: __init__.py  thing.py
tests/: test_thing.py
